# cheese-app-ci-cd

./: Dockerfile  README.md  docker-entrypoint.sh  docker-shell.sh  pyproject.toml
src/api-service/api/: service.py
tests/integration/: test_api.py
tests/system/: test_system_api.py
tests/unit/: test_utils.py
