[project]
name = "cheese-app-api"
version = "0.1.0"
description = "Cheese App CI/CD Tutorial - API Service"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "black>=24.1.1",
    "fastapi>=0.111.0",
    "flake8>=7.0.0",
    "httpx>=0.26.0",
    "pre-commit>=3.6.0",
    "pytest-asyncio>=0.23.3",
    "pytest-cov>=4.1.0",
    "pytest>=7.4.4",
    "python-multipart>=0.0.7",
    "requests>=2.31.0",
    "uvicorn>=0.27.0",
]
